--- a/index.html
+++ b/index.html
@@ -883,8 +883,8 @@
 <!-- Script -->
 <script>
     (() => {
-  const token = "patUpmJA8PRMSPhcP.d34d1fcfaf8dd150fd5b48b6fc749d5b4a289247ae9989a3032094ff7f4c5093";
-  const baseID = "appCRNxydHCZVH1I0";
+  const token = "patG3fTKEdzPZXDWU.7cc40262a6b969afc29fa17e3b0d27f27977691180bd6418ea1d1b354c3c7103";
+  const baseID = "appEc0WPMQNfZuju3";
   const tableName = "Posts";
 
   async function fetchPosts() {
@@ -1468,7 +1468,7 @@
                     <div class="popup-text-box">
 
 <h1>Privacy Policy</h1>
-<p>Last updated: September 30, 2024</p>
+<p>Last updated: September 15, 2025</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
 <h2>Interpretation and Definitions</h2>
